Fix spacing of social links after normalize implementation

--- a/_sass/components/_social-links.scss
+++ b/_sass/components/_social-links.scss
@@ -1,3 +1,8 @@
+.social-links__list {
+    margin: 0;
+    padding: 0;
+}
+
 .social-links__item {
     display: inline-block;
     margin-right: 15px;
